--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sanjay Kumar | UI Engineer & Senior Application Dev</title>
+    <meta
+      name="description"
+      content="Portfolio of Sanjay Kumar S R, UI Engineer and Senior Application Developer. Showcasing projects, skills, and experience in web development." />
   </head>
   <body>
     <div id="root"></div>
