--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <meta
       name="description"
       content="Portfolio of Sanjay Kumar S R, UI Engineer and Senior Application Developer. Showcasing projects, skills, and experience in web development." />
+    <meta
+      name="keywords"
+      content="Sanjay Kumar, UI Engineer, Senior Application Developer, Portfolio, React, Web Developer, Frontend, JavaScript, TypeScript, Tailwind CSS, Projects, Skills, Experience" />
+    <meta name="author" content="Sanjay Kumar S R" />
+    <meta
+      property="og:title"
+      content="Sanjay Kumar | UI Engineer & Senior Application Dev" />
+    <meta
+      property="og:description"
+      content="Portfolio of Sanjay Kumar S R, UI Engineer and Senior Application Developer. Showcasing projects, skills, and experience in web development." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sanjay-dev-beta.vercel.app/" />
+    <meta property="og:image" content="/logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Sanjay Kumar | UI Engineer & Senior Application Dev" />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Sanjay Kumar S R, UI Engineer and Senior Application Developer. Showcasing projects, skills, and experience in web development." />
+    <meta name="twitter:image" content="/logo.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
