Added About me section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sanjay Kumar | UI Engineer & Senior Application Dev</title>
+    <title>Sanjay Kumar | UI Engineer & Senior Frontend Dev</title>
     <meta
       name="description"
       content="Portfolio of Sanjay Kumar S R, UI Engineer and Senior Application Developer. Showcasing projects, skills, and experience in web development." />
@@ -27,7 +27,7 @@
       content="Sanjay Kumar | UI Engineer & Senior Application Dev" />
     <meta
       name="twitter:description"
-      content="Portfolio of Sanjay Kumar S R, UI Engineer and Senior Application Developer. Showcasing projects, skills, and experience in web development." />
+      content="Portfolio of Sanjay Kumar S R, UI Engineer, Senior Frontend Developer, and Senior Application Developer. Showcasing projects, skills, and experience in web development." />
     <meta name="twitter:image" content="/logo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
