Added MVTM - Espresa Reward

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sanjay Kumar | UI Engineer & Senior Frontend Dev</title>
+    <title>Sanjay Kumar | Senior Frontend Dev | UI Engineer</title>
     <meta
       name="description"
       content="Portfolio of Sanjay Kumar S R, UI Engineer and Senior Application Developer. Showcasing projects, skills, and experience in web development." />
